--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,3 +1,59 @@
 /****************** 
   Main
 ******************/
+
+.faq{
+  padding: 10px 5px;
+
+  h2{
+    color: #3c4043;
+    font-size: 20px;
+  }
+
+  p{
+    padding: 20px 0;
+  }
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  /* 
+    mobile
+  */
+    
+  }
+  
+  // Medium devices (tablets, 768px and up)
+  @media (min-width: 768px) { 
+    /* 
+    tablet
+    */
+  
+  }
+  
+  // Large devices (desktops, 992px and up)
+  @media (min-width: 992px) { 
+    
+  }
+  
+  // Extra large devices (large desktops, 1200px and up)
+  @media (min-width: 1200px) { 
+    .faq{
+    
+      padding: 10px 5px;
+      width: 1000px;
+      margin: 50px auto 0;
+    
+      h2{
+        color: #5f6368;
+        font-size: 23px;
+      }
+    
+      p{
+        padding: 20px 0;
+      }
+    }
+  
+   
+  }
